# blamediff

./: Cargo.toml  lorem-ipsum.txt
blamediff/: Cargo.toml
blamediff/src/: diffprinter.rs  error.rs  log.rs  main.rs  nocommitgraphstuff.rs  topo.rs
culpa/: Cargo.toml  build.rs  gentest
culpa/src/: blame.rs  collector.rs  error.rs  lib.rs  line_mapping.rs  line_tracking.rs  sinks.rs
culpa/tests/: first-test.rs  second-test-first-parent.rs  second-test.rs
culpa/tests/common/: mod.rs
gix-blame/: Cargo.toml
gix-blame/src/: blame.rs  collector.rs  error.rs  lib.rs
src/: blame.rs  collector.rs  diff.rs  diffprinter.rs  error.rs  log.rs  main.rs  my_visitor.rs
src/blame/: mod.rs
topo/: Cargo.toml  README.md
topo/src/: error.rs  generated_tests.rs  lib.rs
