[package]
name = "client"
version = "0.1.0"
authors = ["Øystein Walle"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git-repository = { version = "*", path = "../gitoxide/git-repository" }
clap = { version = "*", features = ["derive"] }
