[package]
name = "blamediff"
version = "0.1.0"
authors = ["Øystein Walle"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gix = { version = "*", path = "../gitoxide/gix" }
clap = { version = "*", features = ["derive"] }
