[package]
name = "blamediff"
version = "0.1.0"
authors = ["Øystein Walle"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gix = "0.44"
clap = { version = "4.2", features = ["derive"] }
culpa = { path = "../culpa" }
anyhow = "1"
time = "0.3"
