[package]
name = "blamediff"
version = "0.1.0"
authors = ["Øystein Walle <oystwa@gmail.com>"]
edition = "2021"
repository = "https://github.com/Osse/blamediff"
license = "MIT OR Apache-2.0"
description = "Program using culpa to blame files and diffs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gix = "0.46"
gix-revision = "*"
clap = { version = "4.2", features = ["derive"] }
culpa = { path = "../culpa" }
anyhow = "1"
time = "0.3"
flagset = "0.4.4"
