[package]
name = "blamediff"
version = "0.1.0"
authors = ["Øystein Walle <oystwa@gmail.com>"]
edition = "2021"
repository = "https://github.com/Osse/blamediff"
license = "MIT OR Apache-2.0"
description = "Program using culpa to blame files and diffs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gix = "0.54"
gix-commitgraph = "*"
gix-revwalk = "*"
gix-revision = "*"
gix-hash = "*"
gix-hashtable = "*"
gix-object = "*"
gix-odb = "*"
gix-traverse = "*"
clap = { version = "4.2", features = ["derive"] }
culpa = { path = "../culpa" }
anyhow = "1"
time = "0.3"
flagset = "0.4.4"
trace = "0.1"
thiserror = "1.0.49"
smallvec = "1.11.1"

[dev-dependencies]
pretty_assertions = "1.4"
test-case = "3.2.1"
