[package]
name = "topo"
version = "0.1.0"
edition = "2021"
description = "A topological walk for gitoxide"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gix-commitgraph = "*"
gix-hash = "*"
gix-object = "*"
gix-revision = "*"
gix-revwalk = "*"

flagset = "0.4.4"
smallvec = "1.11.1"
thiserror = "1.0.49"
trace = "0.1"

[dev-dependencies]
gix = "0.54"
pretty_assertions = "1.4"
test-case = "3.2.1"

[features]
## Run _all_ tests instead of a few chosen ones
alltests = []
## Apply tracing from the trace crate
trace = []
