[package]
name = "topo"
version = "0.1.0"
edition = "2021"
description = "A topological walk for gitoxide"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gix-commitgraph = { path = "../../gitoxide/gix-commitgraph" }
gix-hash = { path = "../../gitoxide/gix-hash" }
gix-object = { path = "../../gitoxide/gix-object" }
gix-revision = { path = "../../gitoxide/gix-revision" }
gix-revwalk = { path = "../../gitoxide/gix-revwalk" }

flagset = "0.4.4"
smallvec = "1.11.1"
thiserror = "1.0.49"
trace = "0.1"

[dev-dependencies]
gix-odb = { path = "../../gitoxide/gix-odb" }
pretty_assertions = "1.4"
test-case = "3.2.1"

[features]
default = ["standalone"]

## Run _all_ tests instead of a few chosen ones
alltests = []
## Compile as separate crate
standalone = []
## Apply tracing from the trace crate
trace = []
